--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="ถาม, ตอบ, ปัญหาใจ, เพื่อนใจ"view-head>
     <meta property="og:title" content="เพื่อนใจ Soul Friends" view-head/>
     <meta property="og:site_name" content="เพื่อนใจ Soul Friend"/>
-    <meta property="og:image" itemprop="image primaryImageOfPage" content="/assets/images/biglogo.png"/>
+    <meta property="og:image" itemprop="image primaryImageOfPage" content="http://i.imgur.com/zATr9P3.png"/>
     <meta property="og:url" content="puanjai.com" view-head/>
     <meta property="og:description" content="ชุมชนเพื่อแบ่งปันปัญหาใจและช่วยกันพัฒนาความสุข" view-head/>
     <meta property="fb:app_id" content="816905961709405" />
