--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -20,7 +20,7 @@
 
 		Even though life gets tough, things do not go the way we wanted to, and life seems to be weighting you down. We, Soul Friends, wants to be there to alleviate an do whatever we can to help you get back up and move foward stronger and happier into life without wanting anything in return.<br><br>
 
-		Please remember tht there is always someone behind you who supports you even when you are at your worst or your best.<br><br>
+		Please remember that there is always someone behind you who supports you even when you are at your worst or your best.<br><br>
 
 		Puanjai would like to sincerely thank you for coming to support this website in anyway you can. Please make use of it and help others along the way in the hope your small act could change someone's life and make this world a little brighter.<br><br>
 
