--- a/client/app/landing/landing.html
+++ b/client/app/landing/landing.html
@@ -11,13 +11,13 @@
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="th_TH" />
 <div class="container-fluid no-gutter" ng-controller="LandingCtrl" style="position:relative; overflow: hidden;">
-  <img class="hidden-xs" ng-src="/assets/images/lake-min.jpg" alt="" du-parallax y="background"  style="width:100%; position: relative;"/>
+  <img class="hidden-xs" ng-src="/assets/images/lake-min.jpg" alt="" du-parallax y="background"  style="width:100%; height:100%; position: relative;"/>
   <div class="visible-xs" style="height:370px; position:relative;">
   </div>
 
   <div style="position: absolute; left: 50%; z-index: 300; top:35px;">
-    <div id="mainTitle" class="animated fadeIn white text-shadow" style="position: relative; left: -50%;">
-     <h1 class="" style="margin:0;">เพื่อนใจ</h1>
+    <div id="mainTitle" class="wow fadeIn white text-shadow" style="position: relative; left: -50%;">
+     <h1 style="margin:0;">เพื่อนใจ</h1>
      <h2 class="text-center">ชุมชนเพื่อเกื้อหนุนและพัฒนาจิตใจของกันและกัน</h2>
         <a id="enterMain" class="btn text-shadow puanjaiBorder" ng-href="/main" style="margin-top: 30px; padding:4px 10px">
          <i class="fa fa-login"></i>เข้าสู่หน้าหลัก
@@ -32,25 +32,25 @@
  margin:0;
  text-align: center;
  min-height: 1000px;
- ' class="animated slideInUp row" style="margin-right: 0; margin-left:0;">
- <div class="col-md-8 triangleRight box" style="padding:50px;"ani-scroll="300">
+ ' class="wow slideInUp row" style="margin-right: 0; margin-left:0;">
+ <div class="col-md-8 triangleRight box" style="padding:50px;">
   <h1 style="font-size: 6em;">1. แบ่งบันปัญหาใจ</h1>
-  <p style='text-align: center; text-justify: inter-word; padding:15px;'>ไม่ว่าจะเป็นเรื่องอะไรที่ทําให้เราติดใจ เล็กหรือใหญ่ มีปัญหาที่อยากถามแต่ไม่รู้จะไปถามใคร เข้ามาถามได้เลยที่นี้ สามารถถามโดยระบุหรือไม่ระบุชื่อก็ได้ ความสบายใจ</p>
+  <p style='text-align: center; text-justify: inter-word; padding:15px;'>ไม่ว่าจะเป็นเรื่องอะไรที่ทําให้เราติดใจ เล็กหรือใหญ่ มีปัญหาที่อยากถามแต่ไม่รู้จะไปถามใคร เข้ามาถามได้เลยที่นี้ สามารถถามโดยระบุหรือไม่ระบุชื่อก็ได้เพื่อความสบายใจ</p>
 </div>
 <div class="col-md-4"></div>
 <div class="clearfix"></div>
 <div class="col-md-4"></div>
-<div class="col-md-8 triangleLeft box" style="padding:50px;" ani-scroll="820">
+<div class="col-md-8 triangleLeft box" style="padding:50px;">
   <h1 style="font-size: 6em;">2. ช่วยกันตอบปัญหาใจ</h1>
-  <p>การช่วยคนอื่นตอบปัญหาทางใจนั้นเป็นการช่วยเหลือที่สูงส่ง คนเราบ้างครั่งไม่ได้ต้องการอาหารหรือบ้านใหญ่ๆเท่าคําพูดและกําลังใจจากผู้อื่น ดังนั้นถ้าเราเห็นว่าเขาต้องการความช่วยเหลือ ถ้าเราสละเวลาของเรามาช่วยผู้ได้ก็ได้จะเป็นบุญมาก</p>
+  <p>การช่วยคนอื่นตอบปัญหาทางใจนั้นเป็นการช่วยเหลือที่สูงส่ง คนเราบางครั้งไม่ได้ต้องการอาหารหรือบ้านใหญ่ๆเท่าคําพูดและกําลังใจจากผู้อื่น ดังนั้นถ้าเราเห็นว่าใครต้องการความช่วยเหลือและถ้าเราสละเวลาของเรามาช่วยเขาได้จะเป็นบุญมาก</p>
 </div>
-<div class="col-md-10 triangleRight box" style="padding:50px;" ani-scroll="1170">
+<div class="col-md-10 triangleRight box" style="padding:50px;">
   <h1 style="font-size: 6em;">3. ได้คําตอบ ได้เพื่อนใหม่ และได้ทําให้โลกนี้อบอุ่นขึ้น</h1>
-  <p>ผลของเพื่อนใจนี้ก็เพื่อเป็นพื้นที่ในพัฒนาจิตใจของสังคมให้รู้จักแบ่งบันและช่วยเหลือกันและกัน การตอบคําถามและถามปัญหาทางใจนั้นอาจจะดูเป็นเพียงความช่วยเหลือเล็กๆแต่ที่จริงแล้วเป็นการกระที่ยิ่งใหญ่ ที่เป็นเหมือนแสงนําทางให้คนอื่นๆที่อาจจะมีปัญหาให้ได้เจอคําตอบนั้นโดยเร็ว</p>
+  <p>ผลของเพื่อนใจนี้ก็เพื่อเป็นพื้นที่ในการพัฒนาจิตใจของสังคมให้รู้จักแบ่งปันและช่วยเหลือกันและกัน การตอบคําถามและถามปัญหาทางใจนั้นอาจจะดูเป็นเพียงความช่วยเหลือเล็กๆแต่ที่จริงแล้วเป็นการกระทําที่ยิ่งใหญ่ ที่เป็นเสมือนแสงนําทางให้คนอื่นๆที่อาจจะมีปัญหาให้ได้เจอคําตอบนั้นโดยเร็ว</p>
 </div>
 </div>
 
-<div class="animated fadeIn" style="position:relative;" ani-view>  
+<div class="wow fadeIn" style="position:relative;">  
   <div class="col-md-6 col-xs-6"></div>
   <div class="col-md-6 col-xs-6 triangleLeft" style="  min-height: 56px;"></div>
   <div class="col-md-12" style="padding-bottom: 40px;">      
@@ -73,8 +73,8 @@
 <div class="clearfix"></div>
 
 <div ng-if="userGroups.length > 1" class="container-fluid background-yellow" style="min-height: 420px;">
-  <carousel interval="4000" style="display:block; margin:0 auto; width:100%; margin-bottom: 50px; margin-top: 50px; padding: 0 12%;" disable-animation="true">
-    <slide ng-repeat="users in userGroups" class="animated fadeIn">
+  <carousel interval="4000" style="display:block; margin:0 auto; width:100%; margin-bottom: 50px; margin-top: 50px; padding: 0 12%;">
+    <slide ng-repeat="users in userGroups" class="wow fadeIn">
       <div class="row">
         <div ng-repeat="user in users"class="col-md-4">
           <div style="position:absolute: top:10px;">
